<resources>
    <string name="abbrev_bytes">B</string>
    <string name="abbrev_gigabytes">GB</string>
    <string name="abbrev_kilobytes">KB</string>
    <string name="abbrev_megabytes">MB</string>
    <string name="about_action">About</string>
    <string name="about_title_fmt">About %s</string>
    <string name="account_clear_dlg_instructions_fmt">Local copies of messages in \"%s\" will be removed. Account settings will be retained.</string>
    <string name="account_clear_dlg_title">Clear Account</string>
    <string name="account_settings_action">Account settings</string>
    <string name="account_settings_crypto_app">OpenPGP app</string>
    <string name="account_settings_crypto_support_sign_only">Show unencrypted signatures</string>
    <string name="account_settings_crypto_support_sign_only_off">Unencrypted signatures will be ignored</string>
    <string name="account_settings_crypto_support_sign_only_on">Unencrypted signatures will be displayed</string>
    <string name="accountlist_preferences">Account list</string>
    <string name="action_remote_search">Search messages on server</string>
    <string name="animations_summary">Use gaudy visual effects</string>
    <string name="animations_title">Animation</string>
    <string name="archive_action">Archive</string>
    <string name="background_ops_label">Background sync</string>
    <string name="batch_select_all">Select all</string>
    <string name="check_mail_action">Check mail</string>
    <string name="compact_action">Compact account</string>
    <string name="compose_action">Compose</string>
    <string name="copy_action">Copy</string>
    <string name="count_search_summary">Turn off for faster display</string>
    <string name="count_search_title">Count search results</string>
    <string name="debug_enable_debug_logging_summary">Log extra diagnostic information</string>
    <string name="debug_enable_debug_logging_title">Enable debug logging</string>
    <string name="debug_enable_sensitive_logging_summary">May show passwords in logs.</string>
    <string name="debug_enable_sensitive_logging_title">Log sensitive information</string>
    <string name="debug_preferences">Debugging</string>
    <string name="delete_action">Delete</string>
    <string name="display_preferences">Display</string>
    <string name="empty_trash_action">Empty Trash</string>
    <string name="expunge_action">Expunge</string>
    <string name="filter_folders_action">Find folder</string>
    <string name="flag_action">Add star</string>
    <string name="folder_list_display_mode_all">All folders</string>
    <string name="folder_list_display_mode_first_and_second_class">1st &amp; 2nd Class folders</string>
    <string name="folder_list_display_mode_first_class">1st Class folders</string>
    <string name="folder_list_display_mode_label">Show folders…</string>
    <string name="folder_list_display_mode_not_second_class">Hide 2nd Class folders</string>
    <string name="folder_settings_action">Folder settings</string>
    <string name="folderlist_preferences">Folder lists</string>
    <string name="folders_title">Folders</string>
    <string name="font_size_settings_description">Configure font size</string>
    <string name="font_size_settings_title">Font size</string>
    <string name="forward_action">Forward</string>
    <string name="gestures_summary">Enable gesture control</string>
    <string name="gestures_title">Gestures</string>
    <string name="global_preferences">Global</string>
    <string name="global_settings_action">Global settings</string>
    <string name="global_settings_background_as_unread_indicator_label">Change colour when read</string>
    <string name="global_settings_background_as_unread_indicator_summary">A different background will show that the message has been read</string>
    <string name="global_settings_checkbox_label">Multi-select checkboxes</string>
    <string name="global_settings_checkbox_summary">Always show multi-select checkboxes</string>
    <string name="global_settings_colorize_missing_contact_pictures_label">Colorize contact pictures</string>
    <string name="global_settings_colorize_missing_contact_pictures_summary">Colorize missing contact pictures</string>
    <string name="global_settings_confirm_actions_summary">Show a dialog whenever you perform selected actions</string>
    <string name="global_settings_confirm_actions_title">Confirm actions</string>
    <string name="global_settings_flag_label">Show stars</string>
    <string name="global_settings_flag_summary">Stars indicate flagged messages</string>
    <string name="global_settings_folderlist_wrap_folder_names_label">Wrap long folder names</string>
    <string name="global_settings_folderlist_wrap_folder_names_summary">Use multiple lines to show long folder names</string>
    <string name="global_settings_lock_screen_notification_visibility_title">Lock Screen Notifications</string>
    <string name="global_settings_messageview_autofit_width_label">Auto-fit messages</string>
    <string name="global_settings_messageview_autofit_width_summary">Shrink messages to fit the screen</string>
    <string name="global_settings_messageview_fixedwidth_label">Fixed-width fonts</string>
    <string name="global_settings_messageview_fixedwidth_summary">Use a fixed-width font when showing plain-text messages</string>
    <string name="global_settings_messageview_return_to_list_label">Return to list after delete</string>
    <string name="global_settings_messageview_return_to_list_summary">Return to message list after message deletion</string>
    <string name="global_settings_messageview_show_next_label">Show next message after delete</string>
    <string name="global_settings_messageview_show_next_summary">Show next message by default after message deletion</string>
    <string name="global_settings_messageview_visible_refile_actions_summary">Show selected actions in the message view menu</string>
    <string name="global_settings_messageview_visible_refile_actions_title">Visible message actions</string>
    <string name="global_settings_notification_hide_subject_title">Hide subject in notifications</string>
    <string name="global_settings_notification_quick_delete_description">Show a button in the notification that allows quick message deletion</string>
    <string name="global_settings_notification_quick_delete_title">"Show 'Delete' button"</string>
    <string name="global_settings_preview_lines_label">Preview lines</string>
    <string name="global_settings_privacy_hide_timezone">Hide timezone</string>
    <string name="global_settings_privacy_hide_timezone_detail">Use UTC instead of local timezone in mail headers and reply header</string>
    <string name="global_settings_privacy_hide_useragent">Hide mail client</string>
    <string name="global_settings_privacy_hide_useragent_detail">Remove K-9 User-Agent from mail headers</string>
    <string name="global_settings_registered_name_color_default">"Don't colorize names in your contact list"</string>
    <string name="global_settings_registered_name_color_label">Colorize contacts</string>
    <string name="global_settings_sender_above_subject_label">Correspondent above subject</string>
    <string name="global_settings_sender_above_subject_summary">Show correspondent names above the subject line, rather than below it</string>
    <string name="global_settings_show_contact_name_label">Show contact names</string>
    <string name="global_settings_show_contact_name_summary">Use recipient names from Contacts when available</string>
    <string name="global_settings_show_contact_picture_label">Show contact pictures</string>
    <string name="global_settings_show_contact_picture_summary">Show contact pictures in the message list</string>
    <string name="global_settings_show_correspondent_names_label">Show correspondent names</string>
    <string name="global_settings_show_correspondent_names_summary">Show correspondent names rather than their email addresses</string>
    <string name="global_settings_splitview_mode_label">Show split-screen</string>
    <string name="global_settings_threaded_view_label">Threaded view</string>
    <string name="global_settings_threaded_view_summary">Group messages by conversation</string>
    <string name="hide_headers_action">Hide headers</string>
    <string name="hide_special_accounts_summary">Hide the unified inbox and all messages accounts</string>
    <string name="hide_special_accounts_title">Hide special accounts</string>
    <string name="interaction_preferences">Interaction</string>
    <string name="mark_all_as_read">Mark all as read</string>
    <string name="mark_as_read_action">Mark as read</string>
    <string name="mark_as_unread_action">Mark unread</string>
    <string name="measure_accounts_summary">Turn off for faster display</string>
    <string name="measure_accounts_title">Show account size</string>
    <string name="message_view_theme_action_dark">Switch to dark theme</string>
    <string name="messagelist_preferences">Message lists</string>
    <string name="messageview_preferences">Messages</string>
    <string name="miscellaneous_preferences">Miscellaneous</string>
    <string name="move_action">Move</string>
    <string name="network_preferences">Network</string>
    <string name="next_action">Next</string>
    <string name="notifications_title">Notifications</string>
    <string name="preferences_action">Settings</string>
    <string name="previous_action">Previous</string>
    <string name="privacy_preferences">Privacy</string>
    <string name="quiet_time">Quiet Time</string>
    <string name="quiet_time_description">Disable ringing, buzzing and flashing at night</string>
    <string name="quiet_time_ends">Quiet Time ends</string>
    <string name="quiet_time_notification">Disable notifications</string>
    <string name="quiet_time_notification_description">Completely disable notifications during Quiet Time</string>
    <string name="quiet_time_starts">Quiet Time starts</string>
    <string name="refile_action">Refile…</string>
    <string name="refresh_folders_action">Refresh folder list</string>
    <string name="reply_action">Reply</string>
    <string name="reply_all_action">Reply all</string>
    <string name="search_action">Search</string>
    <string name="select_text_action">Select text</string>
    <string name="send_alternate_action">Share</string>
    <string name="send_messages_action">Send messages</string>
    <string name="settings_attachment_default_path">Save attachments to…</string>
    <string name="settings_compose_theme_label">Composer theme</string>
    <string name="settings_language_label">Language</string>
    <string name="settings_message_theme_label">Message view theme</string>
    <string name="settings_message_theme_selection_label">Fixed message theme</string>
    <string name="settings_message_theme_selection_summary_off">Select the message view theme while viewing the message</string>
    <string name="settings_message_theme_selection_summary_on">Use a fixed message view theme</string>
    <string name="settings_theme_label">Theme</string>
    <string name="show_headers_action">Show headers</string>
    <string name="single_message_options_action">Send…</string>
    <string name="sort_by">Sort by…</string>
    <string name="sort_by_arrival">Arrival</string>
    <string name="sort_by_attach">Attachments</string>
    <string name="sort_by_date">Date</string>
    <string name="sort_by_flag">Star</string>
    <string name="sort_by_sender">Sender</string>
    <string name="sort_by_subject">Subject</string>
    <string name="sort_by_unread">Read/unread</string>
    <string name="spam_action">Spam</string>
    <string name="start_integrated_inbox_title">Start in Unified Inbox</string>
    <string name="unflag_action">Remove star</string>
    <string name="volume_navigation_title">Volume key navigation</string>
</resources>