<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="?iconActionSearch" android:id="@id/search" android:title="@string/search_action" android:showAsAction="always" />
    <item android:icon="?iconActionSearchFolder" android:id="@id/filter_folders" android:title="@string/filter_folders_action" android:showAsAction="always|collapseActionView" android:actionViewClass="android.widget.SearchView" />
    <item android:icon="?iconActionRefresh" android:id="@id/check_mail" android:title="@string/check_mail_action" android:alphabeticShortcut="r" android:showAsAction="always" />
    <item android:icon="?iconActionCompose" android:id="@id/compose" android:title="@string/compose_action" android:alphabeticShortcut="c" android:showAsAction="always" />
    <item android:icon="?iconFolder" android:title="@string/folder_list_display_mode_label">
        <menu>
            <item android:id="@id/display_all" android:title="@string/folder_list_display_mode_all" />
            <item android:id="@id/display_1st_class" android:title="@string/folder_list_display_mode_first_class" />
            <item android:id="@id/display_1st_and_2nd_class" android:title="@string/folder_list_display_mode_first_and_second_class" />
            <item android:id="@id/display_not_second_class" android:title="@string/folder_list_display_mode_not_second_class" />
        </menu>
    </item>
    <item android:icon="?iconActionUpload" android:id="@id/send_messages" android:title="@string/send_messages_action" />
    <item android:icon="?iconActionDelete" android:id="@id/empty_trash" android:title="@string/empty_trash_action" android:alphabeticShortcut="e" />
    <item android:id="@id/compact" android:title="@string/compact_action" android:showAsAction="never" />
    <item android:icon="?iconActionRefresh" android:id="@id/list_folders" android:title="@string/refresh_folders_action" />
    <item android:icon="?iconActionSettings" android:id="@id/settings" android:title="@string/preferences_action" android:showAsAction="never">
        <menu>
            <item android:id="@id/account_settings" android:title="@string/account_settings_action" />
            <item android:id="@id/app_settings" android:title="@string/global_settings_action" />
        </menu>
    </item>
</menu>